# Space-Debris-Tracker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: BitmapFontData.h  Bmp.h  Matrices.h  OpenGLEngine.h  SpaceDebris.h  Sphere.h  TLEReader.h  Tokenizer.h  Vectors.h  debris.h  fontCourier20.h  gl.h
include/tle/: AstroFuncDll.c  AstroFuncDll.h  DllMainDll.c  DllMainDll.h  DllMainDll_Service.c  DllMainDll_Service.h  DllUtils.c  DllUtils.h  EnvConstDll.c  EnvConstDll.h  Sgp4PropDll.c  Sgp4PropDll.h  TimeFuncDll.c  TimeFuncDll.h  TimeFuncDll_Service.c  TimeFuncDll_Service.h  TleDll.c  TleDll.h
lib/mac/: libastrofunc.dylib  libdllmain.dylib  libelops.dylib  libenvconst.dylib  libextephem.dylib  libgcc_s.1.1.dylib  libgfortran.5.dylib  libgomp.1.dylib  libobs.dylib  libquadmath.0.dylib  libsatstate.dylib  libsensor.dylib  libsgp4prop.dylib  libspvec.dylib  libtimefunc.dylib  libtle.dylib  libvcm.dylib
lib/windows/: AstroFunc.lib  DllMain.lib  ElOps.lib  EnvConst.lib  ExtEphem.lib  Obs.lib  SatState.lib  Sensor.lib  Sgp4Prop.lib  SpVec.lib  TimeFunc.lib  Tle.lib  Vcm.lib
src/: BitmapFontData.cpp  Bmp.cpp  Matrices.cpp  OpenGLEngine.cpp  SpaceDebris.cpp  Sphere.cpp  TLEReader.cpp  Tokenizer.cpp  gl.c  imgui_impl_glfw.cpp  main.cpp  sphereShader.cbp
